# cse-595-project

./: .gitignore  README.md  enhance_data.py  install-deps.sh  make_colab_upload.sh  play-types.yaml  pyproject.toml  slurm-bert.sh  upload.tar
.ipynb_checkpoints/: scratch-checkpoint.ipynb
458734593881863925/11c4fb4dc5f64c09bd1d9fa41903bfbd/checkpoints/: epoch=5-step=1500.ckpt
458734593881863925/2ebec4797d874cb19bf2d2590b126410/checkpoints/: epoch=0-step=1250.ckpt
458734593881863925/4e40881b46e14b0da87e033bbc9e79f2/checkpoints/: epoch=2-step=750.ckpt
458734593881863925/59f44515756348219a018b765e2c82f5/checkpoints/: epoch=9-step=2500.ckpt
458734593881863925/6d5a2a5dc955428a9804b51e4eb1268d/checkpoints/: epoch=16-step=21250.ckpt
458734593881863925/748bde63ede2466f996f4d9dba3f7fc3/checkpoints/: epoch=9-step=12500.ckpt
458734593881863925/c5dcb5cd204345238199d1360d30b911/checkpoints/: epoch=9-step=250.ckpt
458734593881863925/e0615bead19e432ba05c7b60927f038e/checkpoints/: epoch=8-step=11250.ckpt
458734593881863925/e465657af9cb46dfb491672b368722f5/checkpoints/: epoch=6-step=8750.ckpt
458734593881863925/ea2783a1c4fa43709cbb494553db9245/checkpoints/: epoch=19-step=10000.ckpt
src/: 595_project.ipynb  basketball_config.py  basketball_dataset.py  basketball_dataset_old.py  enhance_data.py  gen_chart.py  main.py  positional_encoding.py  time_series_rnn_model.py  time_series_transformer_model.py  traffic_dataset.py  tsf_loader.py
test/: sanity_check_model.py  test_basic_model.py  test_dataset.py
(+1 files in other folders)
