[project]
name = "cse-595"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "lightning>=2.4.0",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "mlflow>=2.18.0",
    "notebook>=7.2.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pydantic>=2.10.2",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
    "scikit-learn>=1.5.2",
    "tensorboard>=2.18.0",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchvision>=0.20.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
